--- a/index.html
+++ b/index.html
@@ -11,69 +11,68 @@
         <div id="calculator-div">
             <div id="display-div">
                 <div id="output-div">
-                    TEST OUTPUT
                 </div>
             </div>
             <div id="keypad-div">
                 <div class="button-div">
-                    <button>AC</button>
+                    <button class="symbol" data-button="clear" data-type="symbol">AC</button>
                 </div>
                 <div class="button-div">
-                    <button>+/-</button>
+                    <button class="symbol" data-button="invert" data-type="symbol">+/-</button>
                 </div>
                 <div class="button-div">
-                    <button>%</button>
+                    <button class="symbol" data-button="percent" data-type="symbol">%</button>
                 </div>
                 <div class="button-div">
-                    <button>÷</button>
+                    <button class="symbol" data-button="divide" data-type="symbol">÷</button>
                 </div>
                 <div class="button-div">
-                    <button>7</button>
+                    <button class="number" data-button="7" data-type="number">7</button>
                 </div>
                 <div class="button-div">
-                    <button>8</button>
+                    <button class="number" data-button="8" data-type="number">8</button>
                 </div>
                 <div class="button-div">
-                    <button>9</button>
+                    <button class="number"data-button="9" data-type="number">9</button>
                 </div>
                 <div class="button-div">
-                    <button>×</button>
+                    <button class="symbol" data-button="multiply" data-type="symbol">×</button>
                 </div>
                 <div class="button-div">
-                    <button>4</button>
+                    <button class="number" data-button="4" data-type="number">4</button>
                 </div>
                 <div class="button-div">
-                    <button>5</button>
+                    <button class="number" data-button="5" data-type="number">5</button>
                 </div>
                 <div class="button-div">
-                    <button>6</button>
+                    <button class="number" data-button="6" data-type="number">6</button>
                 </div>
                 <div class="button-div">
-                    <button>-</button>
+                    <button class="symbol" data-button="subtract" data-type="symbol">-</button>
                 </div>
                 <div class="button-div">
-                    <button>1</button>
+                    <button class="number" data-button="1" data-type="number">1</button>
                 </div>
                 <div class="button-div">
-                    <button>2</button>
+                    <button class="number" data-button="2" data-type="number">2</button>
                 </div>
                 <div class="button-div">
-                    <button>3</button>
+                    <button class="number" data-button="3" data-type="number">3</button>
                 </div>
                 <div class="button-div">
-                    <button>+</button>
+                    <button class="symbol" data-button="add" data-type="symbol">+</button>
                 </div>
                 <div class="button-div">
-                    <button>¿</button>
+                    <button class="symbol" data-button="flip" data-type="symbol">¿</button>
                 </div>
                 <div class="button-div">
-                    <button>0</button>
+                    <button class="number" data-button="0" data-type="number">0</button>
                 </div>
                 <div class="button-div">
-                    <button>.</button>
+                    <button class="symbol" data-button="decimal" data-type="symbol">.</button>
                 </div>
                 <div class="button-div">
-                    <button>=</button>
+                    <button class="symbol" data-button="equals" data-type="symbol">=</button>
                 </div>
             </div>
         </div>
