--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </div>
             <div id="keypad-div">
                 <div class="button-div">
-                    <button class="symbol" data-button="clear" data-type="symbol">AC</button>
+                    <button class="symbol" data-button="all-clear" data-type="symbol">AC</button>
                 </div>
                 <div class="button-div">
                     <button class="symbol" data-button="invert" data-type="symbol">+/-</button>
