--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Calculator</title>
 
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
@@ -24,7 +27,7 @@
                     <button class="symbol" data-button="percent" data-type="symbol">%</button>
                 </div>
                 <div class="button-div">
-                    <button class="symbol" data-button="divide" data-type="symbol">÷</button>
+                    <button class="symbol" data-button="divide" data-type="operator">÷</button>
                 </div>
                 <div class="button-div">
                     <button class="number" data-button="7" data-type="number">7</button>
@@ -36,7 +39,7 @@
                     <button class="number"data-button="9" data-type="number">9</button>
                 </div>
                 <div class="button-div">
-                    <button class="symbol" data-button="multiply" data-type="symbol">×</button>
+                    <button class="symbol" data-button="multiply" data-type="operator">×</button>
                 </div>
                 <div class="button-div">
                     <button class="number" data-button="4" data-type="number">4</button>
@@ -48,7 +51,7 @@
                     <button class="number" data-button="6" data-type="number">6</button>
                 </div>
                 <div class="button-div">
-                    <button class="symbol" data-button="subtract" data-type="symbol">-</button>
+                    <button class="symbol" data-button="subtract" data-type="operator">-</button>
                 </div>
                 <div class="button-div">
                     <button class="number" data-button="1" data-type="number">1</button>
@@ -60,7 +63,7 @@
                     <button class="number" data-button="3" data-type="number">3</button>
                 </div>
                 <div class="button-div">
-                    <button class="symbol" data-button="add" data-type="symbol">+</button>
+                    <button class="symbol" data-button="add" data-type="operator">+</button>
                 </div>
                 <div class="button-div">
                     <button class="symbol" data-button="flip" data-type="symbol">¿</button>
@@ -72,7 +75,7 @@
                     <button class="symbol" data-button="decimal" data-type="symbol">.</button>
                 </div>
                 <div class="button-div">
-                    <button class="symbol" data-button="equals" data-type="symbol">=</button>
+                    <button class="symbol" data-button="equals" data-type="operator">=</button>
                 </div>
             </div>
         </div>
